kubefile/train-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-deployment
spec:
  selector:
    matchLabels:
      app: train
  replicas: 3
  template:
    metadata:
      labels:
        app: train
    spec:
      containers:
      - name: train-deployment
        image: anuphnu/nodejsanup:v1
        ports:
        - name: nodejs-port
          containerPort: 3000
