kubefile/train-service.yml
apiVersion: v1
kind: Service
metadata:
  name: train-service
spec:
  ports:
  - port: 80
    targetPort: nodejs-port
    protocol: TCP
  selector:
    app: train
  type: LoadBalancer
