kubefile/train-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: train-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: train.anupdubey.tk
    http:
      paths:
      - backend:
          serviceName: train-service
          servicePort: 80
        path: /
